# pit-predict

./: .gitignore  Dockerfile  README.md  app.py  main.py  mappings.py  model_definition.py  model_training.py  prepare_dataset.py  pyproject.toml  requirements.txt
model/: pitstopmodel.pth  scaler.pkl
