[project]
name = "pit-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "fastf1>=3.6.0",
    "ipykernel>=6.30.0",
    "joblib>=1.3.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.11.0",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
]
