[project]
name = "pit-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "torch>=1.13.0,<2.1.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.2.0,<1.4.0",
    "plotly>=5.15.0",
    "joblib>=1.2.0",
    "requests>=2.25.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]
